Criado o handler para deletar o usuário
